--- a/style.css
+++ b/style.css
@@ -17,12 +17,32 @@ body {
     font-size: 40px;
     background-color: #E5E7EB;
     gap: 50px;
+    padding: 20px;
 }
 
 .form {
+    font-size: 16px;
     display: flex;
-    max-width: 200px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    height: 130px;
+}
 
+.middle {
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+input {
+    max-width: 200px;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
 }
 
 .account {
@@ -31,13 +51,8 @@ body {
     border-radius: 5px;
     border: none;
     padding: 5px;
-    margin: 20px;
+    width: 200px;
     
-}
-
-.middle {
-    display: flex;
-    justify-content: left;
 }
 
 .bottom {
@@ -45,13 +60,26 @@ body {
     flex-direction: column;
     background-color: #E5E7EB;
     gap: 10px;
+    padding: 20px;
 }
 
 .eagle {
-    width: auto;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .left {
     height: 100vh;
+}
+
+.absolute {
+    display: flex;
+    color: white;
+    font-size: 100px;
+    position: absolute;
+    top: 20px;
+    background-color: rgba(50, 50, 50, 0.8);
+    align-items: center;
+    gap: 10px;
 }
