--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     display: flex;
     margin: 0;
     height: 100%;
@@ -9,13 +9,14 @@ body {
     flex-direction: column;
     justify-content: center;
     flex: 1;
+    min-height: 100vh;
+    background-color: #E5E7EB;
 }
 
 .top {
     display: flex;
     flex-direction: column;
     font-size: 40px;
-    background-color: #E5E7EB;
     gap: 50px;
     padding: 20px;
 }
@@ -26,7 +27,6 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: left;
-    height: 130px;
 }
 
 .middle {
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    background-color: white;
 }
 
 input {
@@ -43,6 +44,7 @@ input {
 .input-group {
     display: flex;
     flex-direction: column;
+    flex: 1 1 calc(33.333%);
 }
 
 .account {
@@ -58,15 +60,19 @@ input {
 .bottom {
     display: flex;
     flex-direction: column;
-    background-color: #E5E7EB;
     gap: 10px;
     padding: 20px;
 }
 
-.eagle {
+.galaxy {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.odin {
+    width: 100px;
+    height: auto;
 }
 
 .left {
@@ -78,8 +84,22 @@ input {
     color: white;
     font-size: 100px;
     position: absolute;
-    top: 20px;
-    background-color: rgba(50, 50, 50, 0.8);
+    top: 250px;
+    background-color: rgba(50, 50, 50, 0.5);
     align-items: center;
     gap: 10px;
+    justify-content: center;
+    width: 875px;
+    height: 200px;
+}
+
+.caption {
+    display: flex;
+    color: white;
+    bottom: 0px;
+    position: absolute;
+    width: 875px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(50, 50, 50, 0.5);
 }
